--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "tsc && tsc-alias && node ./dist/index.js",
     "build": "tsc && tsc-alias",
     "winstart": "title %npm_config_id% && node ./dist/index.js",
-    "start": "node ./dist/index.js"
+    "start": "node ./dist/index.js",
+    "start:build": "npm run build && npm start"
   },
   "prisma": {
     "seed": "node dist/prisma/seed.js"
